2007-10-02  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=15102
        XMLHttpRequests should dispatch a readystatechange event.

        * http/tests/xmlhttprequest/readystatechange-expected.txt: Added.
        * http/tests/xmlhttprequest/readystatechange.html: Added.

2007-10-02  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=10370
        RegExp fails to match non-ASCII characters against [\S\s]

        * fast/js/regexp-negative-special-characters-expected.txt: Added.
        * fast/js/regexp-negative-special-characters.html: Added.
        * fast/js/resources/regexp-negative-special-characters.js: Added.

2007-10-02  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        * svg/custom/svgsvgelement-ctm-expected.txt: Added.
        * svg/custom/svgsvgelement-ctm.xhtml: Added.

2007-10-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.

        - test updates for "file:///Volumes/Data/mjs/Work/src/Safari/OpenSource/LayoutTests/fast/dom/serialize-attribute.xhtml"
        http://bugs.webkit.org/show_bug.cgi?id=15339

        We no longer entity-escape the '>' character in content or attribute values since this is unnecessary.
        
        * fast/dom/dom-parse-serialize-expected.txt:
        * fast/dom/serialize-attribute.xhtml:
        * fast/xsl/xslt-processor-expected.txt:

2007-10-02  Oliver Hunt  <oliver@apple.com>

        RS=Eric

        Resetting a large number of the pixel testcases to that generated by trunk,
        so the feature-branch can have a baseline that matches trunk.

        * Changes the expected output images and checksums of a reasonable number of SVG tests.

2007-10-02  Oliver Hunt  <oliver@apple.com>

        RS=Eric,Maciej

        Resetting a large number of the pixel testcases to that generated by trunk,