@@ -33,4 +33,6 @@ layer at (0,0) size 800x600
       RenderBlock (anonymous) at (0,90) size 784x0
 layer at (313,65) size 161x26
   RenderBlock {DIV} at (1,1) size 161x26
-caret: position 1 of child 0 {#text} of child 2 {SPAN} of child 0 {DIV} of child 3 {DIV} of child 1 {BODY} of child 0 {HTML} of document
+    RenderText {#text} at (3,0) size 3x13
+      text run at (3,0) width 3: " "
+caret: position 1 of child 0 {#text} of child 3 {SPAN} of child 1 {DIV} of child 4 {DIV} of child 1 {BODY} of child 0 {HTML} of document
