@@ -91,7 +91,6 @@ private:
     
     void negateStyleRulesThatAffectAppearance();
     void removeRedundantStyles(Node*);
-    void removeUnrenderedNodes();
     
     void handlePasteAsQuotationNode();
     
